# cardio-catch-disease

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
configs/: project.toml
data/raw/: README.md
data/sample/: cardio_sample.csv
docs/: deployment.md
integrations/: google_sheets_appscript.gs
models/: model_card.json  pipeline.joblib
notebooks/: 00_business_understanding.ipynb  01_data_understanding.ipynb  02_exploratory_analysis.ipynb  03_feature_engineering.ipynb  04_modeling_and_business_results.ipynb  05_deployment_and_consumption.ipynb  README.md  cardio-catch-disease.ipynb
reports/: data_profile.json
scripts/: entrypoint.sh
src/: config.py  data_loader.py  predict.py  preprocessing.py  train.py
src/cardio_catch_disease/: __init__.py  api.py  models.py
tests/: test_pipeline.py
