[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardio-catch-disease"
version = "0.1.0"
description = "Cardio Catch Disease Kaggle portfolio workflow"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
